--- a/India_vs_World_COVID_19_by_Rishav (1).ipynb
+++ b/India_vs_World_COVID_19_by_Rishav (1).ipynb
@@ -4623,7 +4623,7 @@
       "source": [
         "Yes, if you look at the world's data and its forecast you can say that India might face one of its worst days if we are not taking strict measures against COVID-19.\n",
         "\n",
-        "###**A Humble Request to all our YouTube viewers please TEST, TEST, TEST: COVID-19** \n",
+        "###**A Humble Request to all Indians, please TEST, TEST, TEST: COVID-19** \n",
         "Don't take your cough and cold lighly as before. If you look at the data number of cases in India is rising but not like in Italy, Wuhan, S.Korea, Spain, or USA. Don't get fool by these numbers (COVID cases in India). I think the number is less because of low awareness and less tests being conducted in India. Currently India is a deadly and risky zone as there are very few COVID-19 test centres in India.  Imagine how many infected people are still around you and are infecting others unknowingly. Remember **India ranks 145** in terms of global healthcare rank while [Italy is on 2nd](https://worldpopulationreview.com/countries/best-healthcare-in-the-world/).\n"
       ]
     },
@@ -4640,7 +4640,7 @@
         "- Go and get a checkup done in case you are suffering from cough,cold, fever, shortness of breath and breathing difficulties. Can't tell for sure but(due to lack of data) , but it might be possible that we don't have the exact number of the COVID-19 cases in India becasuse sometimes it takes weeks to see the first sign/symptom for it. \n",
         "- If you're not getting the checkup done, you might add in spreading the virus unintentionally\n",
         "- Its time we take this pandemic seriously - **LIVE & HELP OTHERS LIVE**\n",
-        "- Take precautions, stay indoors, and utilize this time to develop your machine learning skill with edureka's AI-ML PGP and help the world with your machine learning models."
+        "- Take precautions, stay indoors, and utilize this time to develop your machine learning skills."
       ]
     },
     {
